--- a/www/custom_ui/floorplan/floorplan.css
+++ b/www/custom_ui/floorplan/floorplan.css
@@ -113,22 +113,27 @@ svg, svg * {
 /* Temperature sensor */
 
 .temp-very-low-background {
-  fill: #d9edf7 !important;
+  fill: #6699ff !important;
   fill-opacity: 1 !important;
 }
 
-.temp-below-average-background {
-  fill: #dcefe8 !important;
+.temp-low-background {
+  fill: #6699ff !important;
   fill-opacity: 1 !important;
 }
 
 .temp-average-background {
-  fill: #dff0d8 !important;
+  fill: #99cc33 !important;
+  fill-opacity: 1 !important;
+}
+
+.temp-high-background {
+  fill: #ffcc00 !important;
   fill-opacity: 1 !important;
 }
 
 .temp-very-high-background {
-  fill: #f2dede !important;
+  fill: #ff9900 !important;
   fill-opacity: 1 !important;
 }
 
