floorplan: add snapcast media_players

--- a/www/custom_ui/floorplan/floorplan.css
+++ b/www/custom_ui/floorplan/floorplan.css
@@ -139,7 +139,7 @@ svg, svg * {
   fill-opacity: 1 !important;
 }
 
-/* Media player */
+/* Devices and Media players */
 
 .device-off {
   fill: #ff9900 !important;
